--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,15 @@
 
 .home-name {
     /* For large greeting headline on home page */
-    font-size: 150px;
+    font-size: 50px;
+    text-align: center;
+}
+
+h2 {
+    font-family: "Amatic SC", cursive;
+    font-weight: 700;
+    font-size: 40px;
+    text-align: center;
 }
 
 .prose img {
